--- a/resources/magento22/magento2.2.conf
+++ b/resources/magento22/magento2.2.conf
@@ -9,8 +9,8 @@
  }
  server {
     listen 80;
-    server_name @APPNAME@;
-    set $MAGE_ROOT /var/www/@APPNAME@;
+    server_name @@APPNAME@@;
+    set $MAGE_ROOT /var/www/@@APPNAME@@;
     #include /vagrant/magento2/nginx.conf.sample;
  
 
